--- a/css/style.css
+++ b/css/style.css
@@ -423,18 +423,28 @@ li {
 
 .back-to-top {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 3rem;
+  right: 4rem;
   display: none;
-  width: 40px;
-  height: 40px;
+  width: 6rem;
+  height: 6rem;
   background-color: #f2f9fa;
   color: #666;
   opacity: 0.6;
-  font-size: 1.6rem;
-  line-height: 40px;
+  line-height: 6rem;
+  font-size: 2rem;
   text-align: center;
   text-decoration: none;
+}
+@media (max-width: 768px) {
+  .back-to-top {
+    bottom: 2rem;
+    right: 2rem;
+    width: 4rem;
+    height: 4rem;
+    line-height: 4rem;
+    font-size: 1.6rem;
+  }
 }
 
 /* マウスを乗せた時に透明度を変える */
